--- a/build.gradle
+++ b/build.gradle
@@ -18,14 +18,15 @@ group = mod_group_id
 
 repositories {
     mavenLocal()
-    maven {
-        name = 'GeckoLib'
-        url 'https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/'
-        content {
-            includeGroupByRegex("software\\.bernie.*")
-            includeGroup("com.eliotlash.mclib")
+    exclusiveContent {
+        forRepository {
+            maven {
+                url "https://cursemaven.com"
+            }
         }
-
+        filter {
+            includeGroup "curse.maven"
+        }
     }
 }
 
@@ -121,10 +122,7 @@ configurations {
 }
 
 dependencies {
-    implementation ("software.bernie.geckolib:geckolib-forge-${minecraft_version}:4.7.3") {
-        exclude(group: "com.llamalad7", module: "mixinextras")
-    }
-    implementation("com.eliotlash.mclib:mclib:20")
+    implementation "curse.maven:geckolib-388172:5874016"
     // Example optional mod dependency with JEI
     // The JEI API is declared for compile time use, while the full JEI artifact is used at runtime
     // compileOnly "mezz.jei:jei-${mc_version}-common-api:${jei_version}"
